namespace Instrument.Scheduler.Model;

public class Assay 
{
    public int Id { get; set; }
}
