classDiagram
    class AssayManager {
        -Dictionary~Guid, AssaySample~ _assaySamples
        -AssayExecutionPlanner _executionPlanner
        -SequenceGroupManager _sequenceGroupManager
        -IFlrContextFactory _flrContextFactory
        -IFlrAssayRunContext _flrAssayRunContext
        -IInventoryService _inventoryService
        -ILogger~AssayManager~ _logger
        +AssayManager(executionPlanner, sequenceGroupManager, flrContextFactory, inventoryService, logger)
        +AddAssaySamples(assaySamples: IEnumerable~AssaySample~): Task~bool~
        +RemoveAssaySample(sampleId: Guid): Task~bool~
        +GetAssaySample(sampleId: Guid): AssaySample
        +GetAllAssaySamples(): IReadOnlyCollection~AssaySample~
        +GetAssaySamplesByStatus(status: AssayStatus): IReadOnlyCollection~AssaySample~
        +CreateExecutionPlan(): Task~AssayExecutionPlan~
        +StartExecution(): Task~bool~
        +StopExecution(): Task~bool~
        +HandleSequenceGroupCompletion(sequenceGroupId: Guid): Task
        +CheckInventoryAvailability(): Task~InventoryCheckResult~
        +ReserveInventory(): Task~bool~
        +ReleaseInventory(): Task~bool~
        +StartAssayRun(): Task
        +EndAssayRun(): Task
        +OnAssaySampleStatusChanged: EventHandler~AssaySampleStatusChangedEventArgs~
    }

    class AssaySample {
        +Guid Id
        +Sample Sample
        +List~Assay~ Assays
        +AssayStatus Status
        +DateTime CreatedAt
        +DateTime? StartedAt
        +DateTime? CompletedAt
        +string ErrorMessage
        +Dictionary~string, object~ Metadata
        +SequenceGroup SequenceGroup
        +IFlrSampleTestContext FlrContext
        +int Priority
        +List~AssayResult~ Results
        +AssaySample(sample: Sample, assays: List~Assay~)
        +SetStatus(status: AssayStatus): void
        +AddResult(result: AssayResult): void
        +GetEstimatedDuration(): TimeSpan
        +CanExecute(): bool
        +ValidateInventoryRequirements(): List~InventoryRequirement~
        +CreateSequenceGroup(): SequenceGroup
        +OnStatusChanged: EventHandler~AssayStatusChangedEventArgs~
    }

    class AssayExecutionPlanner {
        -int _maxTestsScheduled
        -ILogger~AssayExecutionPlanner~ _logger
        +AssayExecutionPlanner(logger, configuration)
        +GetExecutionPlan(assaySamples: IReadOnlyCollection~AssaySample~): AssayExecutionPlan
        +OptimizeExecutionOrder(samples: IReadOnlyCollection~AssaySample~): IReadOnlyCollection~AssaySample~
        -GroupAndSplit(source: IReadOnlyCollection~T~, maxSize: int, groupBySelector: Func~T, object~): List~List~T~~
        -CalculatePriority(sample: AssaySample): int
        -CheckResourceContention(samples: IReadOnlyCollection~AssaySample~): ConflictResolution
    }

    class AssayExecutionPlan {
        +int ExecutionId
        +IEnumerable~AssayExecutionStep~ ExecutionSteps
        +DateTime CreatedAt
        +AssayExecutionStatus Status
        +TimeSpan EstimatedDuration
        +AssayExecutionPlan(executionSteps: IReadOnlyCollection~AssayExecutionStep~)
        +GetNextStep(): AssayExecutionStep
        +MarkStepCompleted(stepId: Guid): void
        +MarkStepFailed(stepId: Guid, error: string): void
        +GetProgress(): ExecutionProgress
    }

    class AssayExecutionStep {
        +Guid Id
        +IEnumerable~AssaySample~ AssaySamples
        +AssayStepStatus Status
        +DateTime? StartedAt
        +DateTime? CompletedAt
        +string ErrorMessage
        +TimeSpan EstimatedDuration
        +AssayExecutionStep(assaySamples: IEnumerable~AssaySample~)
        +CanExecute(): bool
        +GetResourceRequirements(): List~ResourceRequirement~
    }

    class SequenceGroupManager {
        -Dictionary~Guid, SequenceGroup~ _sequenceGroups
        -IGrpcGateway _grpcGateway
        -ILogger~SequenceGroupManager~ _logger
        +AddSequenceGroup(sequenceGroup: SequenceGroup): Task~bool~
        +RemoveSequenceGroup(sequenceGroupId: Guid): Task~bool~
        +ExecuteSequenceGroup(sequenceGroupId: Guid): Task~bool~
        +HandleSequenceCompletion(sequenceId: Guid, result: SequenceResult): Task
        +HandleSequenceError(sequenceId: Guid, error: SequenceError): Task
        +CreateHardwareExecutionPlan(): HardwareExecutionPlan
        +OnSequenceGroupCompleted: EventHandler~SequenceGroupCompletedEventArgs~
    }

    class Sample {
        +string Id
        +SampleType Type
        +TubeType TubeType
        +SampleInputLocation SampleInputLocation
        +string Position
        +string CartridgeLot
        +Dictionary~string, object~ Properties
        +Sample(id: string, type: SampleType)
        +ValidateProperties(): bool
    }

    class Assay {
        +int Id
        +string Name
        +string TestMethod
        +Technology Technology
        +Dictionary~string, object~ Parameters
        +List~InventoryRequirement~ InventoryRequirements
        +TimeSpan EstimatedDuration
        +Assay(id: int, name: string, testMethod: string)
        +GetInventoryRequirements(): List~InventoryRequirement~
        +ValidateParameters(): bool
    }

    class AssayResult {
        +Guid Id
        +Guid AssayId
        +DateTime Timestamp
        +Dictionary~string, object~ Measurements
        +ResultStatus Status
        +string Notes
        +AssayResult(assayId: Guid)
        +AddMeasurement(key: string, value: object): void
        +IsValid(): bool
    }

    class SequenceGroup {
        +Guid Id
        +string Name
        +List~Sequence~ Sequences
        +SequenceGroupStatus Status
        +Dictionary~string, object~ Parameters
        +SequenceGroup(id: Guid, name: string)
        +AddSequence(sequence: Sequence): void
        +GetNextSequence(): Sequence
        +IsCompleted(): bool
    }

    class InventoryRequirement {
        +string ArticleType
        +string ArticleId
        +int Quantity
        +Dictionary~string, object~ Properties
        +InventoryRequirement(articleType: string, articleId: string, quantity: int)
    }

    class InventoryCheckResult {
        +bool IsAvailable
        +List~InventoryRequirement~ MissingItems
        +List~InventoryRequirement~ ReservedItems
        +Dictionary~string, string~ Errors
        +InventoryCheckResult(isAvailable: bool)
        +AddMissingItem(requirement: InventoryRequirement): void
        +AddError(item: string, error: string): void
    }

    %% Enums
    class AssayStatus {
        <<enumeration>>
        Created
        Queued
        InventoryReserved
        InProgress
        Completed
        Failed
        Cancelled
        InventoryUnavailable
    }

    class AssayExecutionStatus {
        <<enumeration>>
        Created
        InProgress
        Completed
        Failed
        Cancelled
    }

    class AssayStepStatus {
        <<enumeration>>
        Pending
        InProgress
        Completed
        Failed
        Skipped
    }

    class SampleType {
        <<enumeration>>
        Unspecified
        Sample
        QC
        CC
        CAL
        DarkBlank
        RinseBlank
        ReagentBlank
        FlouroC
    }

    class Technology {
        <<enumeration>>
        Unspecified
        ImmunoCap
        Elia
        ImmunoCapViewAllergy
        EliaDualWash
    }

    %% Relationships
    AssayManager --> AssaySample : manages
    AssayManager --> AssayExecutionPlanner : uses
    AssayManager --> SequenceGroupManager : coordinates with
    AssayManager --> InventoryCheckResult : receives
    
    AssaySample --> Sample : contains
    AssaySample --> Assay : contains
    AssaySample --> AssayResult : produces
    AssaySample --> SequenceGroup : converts to
    AssaySample --> InventoryRequirement : requires
    AssaySample --> AssayStatus : has
    
    AssayExecutionPlanner --> AssayExecutionPlan : creates
    AssayExecutionPlan --> AssayExecutionStep : contains
    AssayExecutionStep --> AssaySample : groups
    
    SequenceGroupManager --> SequenceGroup : manages
    
    Sample --> SampleType : typed as
    Assay --> Technology : uses
    Assay --> InventoryRequirement : requires
    
    InventoryCheckResult --> InventoryRequirement : tracks